(Binary Analysis) Moved ::ByteOrder, reimplemented
* Moved ::ByteOrder to ::Rose::BinaryAnalysis::ByteOrder.

* Reimplemented ByteOrder functions in terms of templates and
  calls to ::Rose::BitOps.

* Marked snake_case names as deprecated and replaced with camelCase
  names.

RPM-419

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -277,6 +277,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/BinaryLoaderPe.h						\
 	Rose/BinaryAnalysis/ByteCode.h							\
 	Rose/BinaryAnalysis/ByteCode/Analysis.h						\
+	Rose/BinaryAnalysis/ByteOrder.h							\
 	Rose/BinaryAnalysis/CallingConvention.h						\
 	Rose/BinaryAnalysis/CodeInserter.h						\
 	Rose/BinaryAnalysis/Concolic.h							\
