(Fortran Flang) Updated to latest Flang version
- VectorTypeSpec was added by flang to DeclarationTypeSpec variant,
  so a Build function was created for it (though not implemented).
- Added 22 tests to Makefile.am, including tests that won't compile
  with gfortran.

GL-6

--- a/tests/nonsmoke/functional/CompileTests/experimental_fortran_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_fortran_tests/Makefile.am
@@ -7,18 +7,13 @@ AM_LDFLAGS = $(ROSE_RPATHS)
 LDADD    = $(ROSE_LIBS)
 
 FORTRAN_TESTCODES =               \
-  tiny.f90
-
-
-FORTRAN_TESTCODES_TODO =          \
   binary_expressions.f90          \
   case_1.f90                      \
   common_1.f90                    \
-  common_2.f90                    \
+  continue.f90                    \
   dowhile.f90                     \
-  function_2.f90                  \
-  function_3.f90                  \
-  function_4.f90                  \
+  expressions.f90                 \
+  fail_image.f90                  \
   ifstmt1.f90                     \
   ifstmt2.f90                     \
   ifstmt3.f90                     \
@@ -30,17 +25,32 @@ FORTRAN_TESTCODES_TODO =          \
   implicit_none_type.f90          \
   negative_values.f90             \
   print1.f90                      \
-  subroutine_1.f90                \
   type_decls_1.f90                \
   type_decls_2.f90                \
   type_decls_3.f90                \
+  Expr_IntLiteralConstant.f90
+
+
+FORTRAN_20xx_TESTCODES =          \
+  tiny.f90
+
+FORTRAN_TESTCODES_TODO =          \
+  common_2.f90                    \
+  function_2.f90                  \
+  function_3.f90                  \
+  function_4.f90                  \
+  subroutine_1.f90                \
   type_def_1.f90
 
 
 TEST_FORTRAN_Objects = ${FORTRAN_TESTCODES:.f90=.o}
 TEST_FORTRAN_Sources = ${FORTRAN_TESTCODES:.f90=.f90.passed}
 
+TEST_FORTRAN_20xx_Objects = ${FORTRAN_20xx_TESTCODES:.f90=.o}
+TEST_FORTRAN_20xx_Sources = ${FORTRAN_20xx_TESTCODES:.f90=.f90.passed}
+
 PASSING_TEST_Objects = $(TEST_FORTRAN_Objects)
+PASSING_TEST_20xx_Objects = $(TEST_FORTRAN_20xx_Objects)
 
 ../../testTranslator:
 	cd ../..; $(MAKE) testTranslator
@@ -50,11 +60,20 @@ $(TEST_FORTRAN_Objects): ../../testTranslator
 #    ## make sure output file is not empty
 	@test -n "$$(find rose_$(@:.o=.f90) -size +0c)"
 
+$(TEST_FORTRAN_20xx_Objects): ../../testTranslator
+	../../testTranslator -rose:experimental_flang_frontend -rose:skipfinalCompileStep -c $(srcdir)/$(@:.o=.f90)
+#    ## make sure output file is not empty
+	@test -n "$$(find rose_$(@:.o=.f90) -size +0c)"
+
 check-fortran:
 	@echo "TEST_FORTRAN_Sources:"
 	@echo $(TEST_FORTRAN_Sources)
+	@echo "TEST_FORTRAN_20xx_Sources:"
+	@echo $(TEST_FORTRAN_20xx_Sources)
 	@echo "PASSING_FORTRAN_Objects:"
 	@echo $(PASSING_TEST_Objects)
+	@echo "PASSING_FORTRAN_20xx_Objects:"
+	@echo $(PASSING_TEST_20xx_Objects)
 
 clean-local:
 	rm -f rose_*.* *.o
@@ -62,6 +81,7 @@ clean-local:
 check-local:
 	@echo "Tests for experimental Fortran frontend."
 	@$(MAKE) $(PASSING_TEST_Objects)
+	@$(MAKE) $(PASSING_TEST_20xx_Objects)
 	@echo "***********************************************************************************************************************"
 	@echo "****** ROSE/tests/nonsmoke/functional/CompileTests/experimental_fortran_tests: make check completed successfully ******"
 	@echo "***********************************************************************************************************************"
