(Fortran Flang) Implemented STOP statement
- Includes Fortran 2018 attribute QUIET, as in

     stop 5, quiet=.true.

GL-6

--- a/tests/nonsmoke/functional/CompileTests/experimental_fortran_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_fortran_tests/Makefile.am
@@ -32,6 +32,7 @@ FORTRAN_TESTCODES =               \
 
 
 FORTRAN_20xx_TESTCODES =          \
+  stop.f90                        \
   tiny.f90
 
 FORTRAN_TESTCODES_TODO =          \
