(DWARF) major code cleanup
* Global namespace pollution has been decreased by moving most global
  symbols to the Rose::BinaryAnalysis::Dwarf namespace (which already
  existed).

* Source code reformatted:
   + to use a more mainstream indentation style
   + to eliminate lines longer than 132 columns
   + to avoid wasting vertical space
   + to not have 'using namespace std'
   + to remove comment turds
   + to simplify conditional compilation
   + to remove some dead code (but not all)

* DWARF releated ROSE headers are installed.

* Everything in the Rose::BinaryAnalysis::Dwarf namespace has been
  moved to the src/Rose/BinaryAnalysis/Dwarf directory.

* The Rose::BinaryAnalysis::Dwarf namespace has been documented.

* Removed the necessity for conditional compilation around the call to
  ::readDwarf, which is now renamed Rose::BinaryAnalysis::Dwarf::parse.

* Rose::BinaryAnalysis::Dwarf uses its own diagnostics facility, which
  means that users can adjust what diagnostics they see from this
  layer. Some users require that librose produces no output.

* All DWARF parsing diagnostics now go to stderr instead of stdout.

* All assertions used for error checking (instead of ROSE program
  logic checks) have been changed to error messages. Some users
  require that librose not exit when the input is malformed.

* All assertions use functions from <Sawyer/Assert.h> instead of
  <cassert> or ROSE_ASSERT/ROSE_ABORT because some users have
  requirements that librose not abort when a logic error is detected.

RPM-463
RPM-462
RPM-461
RPM-460
RPM-459
RPM-458
RPM-454
RPM-453
RPM-452
RPM-450

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -151,6 +151,7 @@ set(rose_LIB_OBJS
   roseBinaryAnalysisConcolicM68kSystem
   roseBinaryAnalysisDebugger
   roseBinaryAnalysisDisassembler
+  roseBinaryAnalysisDwarf
   roseBinaryAnalysisInstructionSemantics
   roseBinaryAnalysisInstructionSemanticsBaseSemantics
   roseBinaryAnalysisModelChecker
