--- a/src/Rose/BinaryAnalysis/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(ByteCode)
 add_subdirectory(Concolic)
 add_subdirectory(Debugger)
 add_subdirectory(Disassembler)
+add_subdirectory(Dwarf)
 add_subdirectory(InstructionSemantics)
 add_subdirectory(InstructionSemantics2)
 add_subdirectory(ModelChecker)
