--- a/src/frontend/SageIII/CMakeLists.txt
+++ b/src/frontend/SageIII/CMakeLists.txt
@@ -101,7 +101,7 @@ install(
     sage3.h sage3basic.h rose_attributes_list.h attachPreprocessingInfo.h
     attachPreprocessingInfoTraversal.h attach_all_info.h manglingSupport.h
     C++_include_files.h fixupCopy.h general_token_defs.h rtiHelpers.h
-    ompAstConstruction.h  OmpAttribute.h omp.h dwarfSupport.h
+    ompAstConstruction.h  OmpAttribute.h omp.h
     omp_lib_kinds.h omp_lib.h rosedll.h fileoffsetbits.h rosedefs.h
     sage3basic.hhh sage_support/cmdline.h sage_support/sage_support.h
     ${CMAKE_CURRENT_BINARY_DIR}/Cxx_GrammarSerialization.h
