(ROSETTA) Moved expression IR C++ code from *.code to *.C
This is a prerequisite for moving to Rosebud.

* Most of the C++ member function definitions in
  src/ROSETTA/Grammar/Expression.code have been moved from this
  text file (*.code) to C++ source files (*.C) in the
  src/AstNodes/Expression directory.

* ROSETTA macros ($*) have been expanded in the moved code.

* Code snippets in *.code that were not clear whether ROSETTA copied
  them only to a single class definition have not yet been moved.

* The resulting empty BEGIN/END sections of the *.code file have been
  temporarily left in place since there were already many of these
  empty sections. They will be removed shortly.

* Build systems have been updated to process these new *.C files.

RPM-427

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ SUBDIRS = util Rosebud ROSETTA roseSupport Rose frontend midend backend \
           3rdPartyLibraries roseIndependentSupport roseExtensions
 endif
 
-SUBDIRS += generated
+SUBDIRS += generated AstNodes
 
 # This lists a large number of directories.  If "make install"
 # is run then we only need a single directory
@@ -216,6 +216,7 @@ libroseLibraries = \
    $(top_builddir)/src/util/Sawyer/libroseSawyer.la \
    $(top_builddir)/src/roseExtensions/failSafe/libfailsafe.la \
    $(top_builddir)/src/Rose/librose_partial.la \
+   $(top_builddir)/src/AstNodes/Expression/libroseAstNodesExpression.la \
    $(libroseSqlite3xConnection) \
    $(libroseQtExtension)
 
