(Build) Default assertion behavior transmitted from CMake to Tup
RPM-481

--- a/tup.config
+++ b/tup.config
@@ -148,6 +148,13 @@ CONFIG_ENABLE_X10_ANALYSIS=no
 # Set to "yes" or "no" depending on whether you want tests to be built and run each time you build ROSE.
 CONFIG_ENABLE_TESTS=yes
 
+# Set to one of the following strings to say how ROSE logic assertions are handled by default. This behavior can be
+# overridden at runtime.
+#   ROSE_ASSERTION_ABORT
+#   ROSE_ASSERTION_EXIT
+#   ROSE_ASSERTION_THROW
+CONFIG_ASSERTION_BEHAVIOR=ROSE_ASSERTION_ABORT
+
 ########################################################################################################################
 # Additional software
 ########################################################################################################################
