--- a/src/3rdPartyLibraries/json/nlohmann/Makefile.am
+++ b/src/3rdPartyLibraries/json/nlohmann/Makefile.am
@@ -1,2 +1,2 @@
 NLOHMANNJSON_includedir=$(prefix)/include/rose/nlohmann
-NLOHMANNJSON_include_HEADERS=json.hpp
+NLOHMANNJSON_include_HEADERS=json.hpp json.h
