(JSON) Added Rose::Yaml::parseJson functions
* These functions parse JSON as YAML and return YAML data structures.

RPM-466

--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -22,7 +22,8 @@ add_library(roseNamespace OBJECT
   FormattedTable.C
   Initialize.C
   Progress.C
-  SourceLocation.C)
+  SourceLocation.C
+  Yaml.C)
 
 add_dependencies(roseNamespace rosetta_generated)
 
