--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -257,6 +257,7 @@ librose_partial_la_SOURCES =								\
 	StringUtility/NumberToString.C							\
 	StringUtility/Predicate.C							\
 	StringUtility/SplitJoin.C							\
-	StringUtility/StringToNumber.C
+	StringUtility/StringToNumber.C							\
+	Yaml.C
 
 # Public header files are installed from parent makefiles.
