--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -249,6 +249,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-225.jov                   \
  gitlab-issue-226.jov                   \
  gitlab-issue-258.jov                   \
+ gitlab-issue-263.jov                   \
  gitlab-issue-264.jov                   \
  charlie.jov                            \
  shadow.jov                             \
