--- a/tests/nonsmoke/functional/roseTests/CMakeLists.txt
+++ b/tests/nonsmoke/functional/roseTests/CMakeLists.txt
@@ -9,7 +9,7 @@ if(enable-c)
   add_subdirectory (astNodeIdTests)
   add_subdirectory (astRewriteTests)
   add_subdirectory (astSymbolTableTests)
-  add_subdirectory (astTokenStreamTests)
+  #  add_subdirectory (astTokenStreamTests)
   if (NOT CYGWIN)
     add_subdirectory (programTransformationTests)
   endif()
