--- a/tests/nonsmoke/functional/roseTests/programAnalysisTests/generalDataFlowAnalysisTests/Makefile.am
+++ b/tests/nonsmoke/functional/roseTests/programAnalysisTests/generalDataFlowAnalysisTests/Makefile.am
@@ -114,8 +114,8 @@ FAILING_CXX_CONSTPROP_SPECIMENS =													 \
 	test2003_29.C test2003_30.C test2003_31.C test2003_37.C test2003_38.C test2004_01.C test2004_03.C test2004_04.C		 \
 	test2004_05.C test2004_06.C test2004_07.C test2004_08.C test2004_09.C test2004_100.C test2004_101.C test2004_102.C	 \
 	test2004_103.C test2004_104.C test2004_105.C test2004_106.C test2004_107.C test2004_108.C test2004_109.C test2004_110.C	 \
-	test2004_111.C test2004_112.C test2004_113.C test2004_114.C test2004_115.C test2004_117.C test2004_118.C test2004_119.C	 \
-	test2004_12.C test2004_121.C test2004_122.C test2004_123.C test2004_124.C test2004_125.C test2004_128.C test2004_13.C	 \
+	test2004_111.C test2004_112.C test2004_113.C test2004_114.C test2004_115.C test2004_118.C test2004_119.C	 \
+	test2004_12.C test2004_122.C test2004_123.C test2004_124.C test2004_125.C test2004_128.C test2004_13.C	 \
 	test2004_131.C test2004_132.C test2004_133.C test2004_134.C test2004_135.C test2004_136.C test2004_137.C test2004_138.C	 \
 	test2004_140.C test2004_144.C test2004_146.C test2004_147.C test2004_148.C test2004_150.C test2004_151.C test2004_152.C	 \
 	test2004_153.C test2004_154.C test2004_155.C test2004_156.C test2004_158.C test2004_16.C test2004_160.C test2004_163.C	 \
