--- a/tests/nonsmoke/functional/roseTests/Makefile.am
+++ b/tests/nonsmoke/functional/roseTests/Makefile.am
@@ -18,7 +18,7 @@ if ROSE_BUILD_CXX_LANGUAGE_SUPPORT
    SUBDIRS += astMempoolTests astMergeTests  \
 	      astPerformanceTests \
               astProcessingTests astQueryTests astRewriteTests \
-              astSymbolTableTests astSnippetTests \
+              astSymbolTableTests \
               programTransformationTests \
               graph_tests mergeTraversal_tests \
               astLValueTests abstractMemoryObjectTests varDeclNorm  astNodeIdTests \
@@ -26,7 +26,8 @@ if ROSE_BUILD_CXX_LANGUAGE_SUPPORT
 
 # DQ (8/24/2021): We could put back astSymbolTableTests and astSnippetTests, but astTokenStreamTests is still failing.
 # DQ (3/31/2021): Testing by removing astTokenStreamTests (above)
-#              astSymbolTableTests astTokenStreamTests astSnippetTests 
+# TV: astSnippetTests does not pass
+#              astTokenStreamTests astSnippetTests 
 
 # DQ (11/5/2016): Skip these tests when using the address sanitizer since they would 
 # take SO LONG (at least over an hour for initial testing, I think).
