(Jovial) Fix enum_val, implement builtin variable BITSINPOINTER
- Added an SgCastExp to SgEnumVal as a possible expression created by traverse_StatusConstant,
  in response to gitlab-issue-261. This is not ideal as a status constant is assigned to
  a cast expression by the unparser, thus conflating types.
- Added BITSINPOINTER to IntegerMachineParameter ATerm traversal.

GL-261
GL-262

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -249,6 +249,8 @@ JOVIAL_TESTCODES = \
  gitlab-issue-225.jov                   \
  gitlab-issue-226.jov                   \
  gitlab-issue-258.jov                   \
+ gitlab-issue-261.jov                   \
+ gitlab-issue-262.jov                   \
  gitlab-issue-263.jov                   \
  gitlab-issue-264.jov                   \
  charlie.jov                            \
