(Ada, CMake) added CMake support for Ada frontend
Current impelementation builds build tree but issues exist for install tree

RC-1518

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(OpenFortranParser_SAGE_Connection)
 add_subdirectory(ECJ_ROSE_Connection)
 add_subdirectory(PHPFrontend)
 add_subdirectory(PythonFrontend)
+add_subdirectory(Experimental_Ada_ROSE_Connection)
