--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -253,6 +253,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-262.jov                   \
  gitlab-issue-263.jov                   \
  gitlab-issue-264.jov                   \
+ gitlab-issue-287.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
