(Jovial) IF Statement no begin
- IfStatement grammar was ambiguous
- Fixed by adding IfSimpleStatement and IfElseStatement with {prefer} of
  IfSimpleStatement

GL-288

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -254,6 +254,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-263.jov                   \
  gitlab-issue-264.jov                   \
  gitlab-issue-287.jov                   \
+ gitlab-issue-288.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
