(Documentation) Document how to switch linkers in Tup
RPM-508

--- a/tup.config
+++ b/tup.config
@@ -87,6 +87,11 @@ CONFIG_C_MISC=
 CONFIG_CXX_MISC=
 
 # Linker command-line switches for warnings and miscellaneous libraries.
+# For linkers, try these switches:
+#   -fuse-ld=ld         This is the default linker for GCC but is quite slow
+#   -fuse-ld=gold       This is a faster linker developed at Google
+#   -fuse-ld=lld        This is an even faster linker that's part of the LLVM work
+#   -fuse-ld=mold       This is faster even than lld (see https://github.com/rui314/mold if using GCC<12)
 CONFIG_LD_WARN=
 CONFIG_LD_MISC=-fuse-ld=gold
 CONFIG_LD_STATIC=-static
