(Jovial) Function Pointers
- A <procedure-name> or <function-name> provided as a <loc-argument> to
  the LOC function should be an SgFunctionRefExp not an SgFunctionCallExp.
- Fixed by passing a bool argument to tranverse_Variable() indicating that
  a reference expression should be used.

GL-292

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -387,6 +387,7 @@ COMPOOL_TESTCODES = \
  gitlab-issue-219.cpl                   \
  gitlab-issue-225.cpl                   \
  gitlab-issue-264.cpl                   \
+ gitlab-issue-292.cpl                   \
  beta.cpl                               \
  parttype.cpl                           \
  comments_start_term.cpl
