(Binary Analysis) New data-flow debugging tool
* Added bat-dataflow tool that runs a symbolic data-flow analysis on
  specified functions, printing incoming and outgoing states along the
  way.

* Fixed a very minor debug output formatting problem in
  Rose::BinaryAnalysis::DataFlow -- a missing line feed.

RPM-513

--- a/tools/BinaryAnalysis/CMakeLists.txt
+++ b/tools/BinaryAnalysis/CMakeLists.txt
@@ -30,6 +30,10 @@ if(enable-binary-analysis)
   target_link_libraries(bat-container bat ROSE_DLL)
   install(TARGETS bat-container DESTINATION bin)
 
+  add_executable(bat-dataflow bat-dataflow.C)
+  target_link_libraries(bat-dataflow bat ROSE_DLL)
+  install(TARGETS bat-dataflow DESTINATION bin)
+
   add_executable(bat-debug-semantics bat-debug-semantics.C)
   target_link_libraries(bat-debug-semantics bat ROSE_DLL)
   install(TARGETS bat-debug-semantics DESTINATION bin)
